# DBSpace

./: .gitignore  BasicsLoading.ipynb  DBSOsc.py  DBSPace_DataLoading.ipynb  DBS_Osc.py  DBSpace.py  DBSpaceOverview.ipynb  DEPR_DBSOsc.py  Dockerfile  Experiment_Metadata_HMLab.json  README.md  REMOVEDBSpace.py  V_sweep_fixedZ_script.py  Viz_Experiments.html  Z_diff_V_sweep_script.py  __init__.py  pyproject.toml  requirements.txt  setup.py  spot_check.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lax-python-package.yml
MMDBS/: MMDBS.py  TimeSeries.py  tspy.py
biometric/: Partial_Biometric.py  __init__.py
control/: TVB_DTI.py  __init__.py  dyn_osc.py  network_action.py  proc_dEEG.py  stream_dEEG.py
dLFP/: diff_model.py  ipg_waveform.py  synth_lfp.py
dLFP/ipg_data/: ssipgwave_vreg_Ra1p1kOhm_1usdt.txt
experiments/hm_vineet/: Experiment_Metadata_HMLab.json
notebooks/: A2_DSC_display.ipynb  BasicsLoading.ipynb  Overview.ipynb
notebooks/.ipynb_checkpoints/: BasicsLoading-checkpoint.ipynb  Overview-checkpoint.ipynb  (+1 more)
pre_proc/: DBS_Osc.py  __init__.py  json_excel_conversion.ipynb  jsontoexcel.py  rawtoexperiment.ipynb  rawtoexperiment.py  requirements.txt  spotcheck.py  spotcheck_gui.py
readout/: BR_DataFrame.py  ClinVect.py  DSV.py  __init__.py  decoder.py
scripts/: V_sweep_fixedZ_script.py  Z_diff_V_sweep_script.py
simulation/: DifferentialLFPModel.ipynb  Impedances.py  diff_model.py  ipg_waveform.py  tanh_inversion.py  v_sweep_validation.py
src/: setup.py
tools/: new_spot_check.py  spot_check.py
visualizations/: EEG_Viz.py
(+84 files in other folders)
