[tool.poetry]
name = "dbspace"
version = "0.1.0"
description = "Library for data-driven, network-level modeling of clinical DBS dynamics"
authors = ["Vineet Tiruvadi <virati@gmail.com>"]
license = "GLPv3"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.2"
scipy = "^1.7.1"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
sklearn = "^0.0"
scikit-learn = "^1.0"
nilearn = "^0.8.1"
nibabel = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
